# DevLogicker

./: Analyza.odg  CMakeLists.txt  Doxyfile
docs/: Introduction.md
puzzles/: LatinSquare.hpp  latin_square.hpp
puzzles_1/: .Elements.hpp.swp  .LatinSquare.hpp.swp  .Magnets.hpp.swp  .Puzzle.hpp.swp  .puzzles.hpp.swp  Elements.hpp  LatinSquare.hpp  Magnets.hpp  Puzzle.hpp
src/: .global.devel.swp  .operation.devel.swp  .reader.devel.swo  .reader.devel.swp  global.devel  operation.devel  reader.devel
src/catalogue/init_step/: init_step.hpp
src/catalogue/item/: elements.hpp  magnet_field.hpp
src/catalogue/management_type/: devel.devel
src/catalogue/mapping_id/: mapping_id.hpp
src/catalogue/mapping_type/: .read_only_mapping.hpp.swo  read_only_mapping.hpp
src/core/: .grid.hpp.swp  convertor.hpp  grid.hpp  grid_type.hpp  implementations_registry.hpp  item.hpp  mapping_id.hpp  puzzle.hpp  relation.hpp
src/core/grid/: grid.hpp  grid.hpp.old  grid_type.hpp  managed_id.hpp  managed_map.hpp  managed_slot.hpp  managed_type.hpp  managed_value.hpp
src/core/item/: alphanum.hpp  topology.hpp
src/core/item/collection/: sequence.hpp  set.hpp
src/core/item/topology/: rectangle.hpp  rows_cols.hpp  square.hpp  sudoku_classic_small_squares.hpp
src/core/operation/: relation.hpp  transform.hpp
src/core/operation/connective/: and.hpp
src/core/operation/predicate/: sets_equal.hpp
src/core/operation/transform/: .TransformSet.hpp.swp  domain_1_to_n.hpp  domain_any_value.hpp  identity.hpp  transform_set.hpp
src/grid_builder/: .grid_builder.hpp.swp  grid_builder.cpp  grid_builder.hpp  grid_recipe.hpp  init_step.hpp
src/input/: input.hpp  json_input.cpp  json_input.hpp
src/puzzles/: elements.hpp  latin_square.hpp  magnets.hpp  mines.hpp  norinori.hpp  staircases.hpp  starbattle.hpp  sudoku_classic.hpp
src/types_util/: types_util.hpp
test/catalogue/mapping_type/: read_only_mapping.cpp
test/core/: grid.cpp
test/grid_builder/: .grid_builder.cpp.swp  grid_builder.cpp
test/input/: json_input.cpp
test/types_util/: types_util.cpp
test_integration/: puzzles.cpp
test_puzzle_inputs/: elements.lgc  latin_square3x3.lgc  magnets.lgc  mines.lgc  norinori.lgc  staircases.lgc  starbattle.lgc  sudoku_classic.lgc
test_unit/core/: convertor.cpp  dummy_management_type.cpp  grid.cpp  implementations_registry.cpp  mock_implementations_registry.hpp  mock_management_type.cpp  mock_management_type.hpp
test_unit/core/grid/: common.hpp  grid.cpp  managed_id.cpp  managed_map.cpp  managed_slot.cpp  managed_type.cpp  managed_value.cpp  mock_grid.hpp
test_unit/grid_builder/: grid_builder.cpp  init_step.cpp
test_unit/input/: mock_input.cpp  mock_input.hpp
test_unit/types_util/: types_util.cpp
