cmake_minimum_required(VERSION 3.13)
project(DevLogicker)

#set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -fconcepts")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(run_unit_tests)
target_include_directories(run_unit_tests PRIVATE src)
target_include_directories(run_unit_tests PRIVATE /usr/include)
target_link_libraries(run_unit_tests PRIVATE gtest_main)
target_link_libraries(run_unit_tests PRIVATE gtest)
target_link_libraries(run_unit_tests PRIVATE pthread)
target_link_libraries(run_unit_tests PRIVATE jsoncpp)

target_sources(run_unit_tests PRIVATE test_unit/catalogue/mapping_type/read_only_mapping.cpp)
target_sources(run_unit_tests PRIVATE test_unit/core/grid.cpp)
target_sources(run_unit_tests PRIVATE test_unit/grid_builder/grid_builder.cpp)
target_sources(run_unit_tests PRIVATE test_unit/input/json_input.cpp)
target_sources(run_unit_tests PRIVATE test_unit/types_util/types_util.cpp)

target_sources(run_unit_tests PRIVATE src/input/json_input.cpp)

add_executable(run_puzzles_test)
target_include_directories(run_puzzles_test PRIVATE src)
target_include_directories(run_puzzles_test PRIVATE /usr/include)
target_link_libraries(run_puzzles_test PRIVATE gtest_main)
target_link_libraries(run_puzzles_test PRIVATE gtest)
target_link_libraries(run_puzzles_test PRIVATE pthread)
target_link_libraries(run_puzzles_test PRIVATE jsoncpp)

target_sources(run_puzzles_test PRIVATE test_integration/puzzles.cpp)
target_sources(run_puzzles_test PRIVATE src/input/json_input.cpp)
